--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgress
+  adapter: postgresql
   pool: 5
   timeout: 5000
   username: newput
