--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,7 @@ default: &default
   port: 5432
   url: postgres://iiujvhpirpitxh:nGV_X9DDOWbhEK62kBYJQHCSei@ec2-107-21-221-59.compute-1.amazonaws.com:5432/da6kt1qec1p23
   psql: heroku pg:psql --app secret-peak-7782 DATABASE
+  password: nGV_X9DDOWbhEK62kBYJQHCSei
 
 development:
   <<: *default
