--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
   host: ec2-107-21-221-59.compute-1.amazonaws.com
   port: 5432
   url: postgres://iiujvhpirpitxh:nGV_X9DDOWbhEK62kBYJQHCSei@ec2-107-21-221-59.compute-1.amazonaws.com:5432/da6kt1qec1p23
-  psql: heroku pg:psql --app secret-peak-7782 DATABASE
+  psql: heroku pg:psql --app newputblog DATABASE
   password: nGV_X9DDOWbhEK62kBYJQHCSei
 
 development:
